# aoc2024-haskell

./: .gitignore  LICENSE  README.md  Setup.hs  aoc2024-haskell.cabal
app/: Main.hs
lib/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day99.hs  Grid.hs  Util.hs
