cabal-version:      3.0
name:               aoc2024-haskell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             roycrippen
maintainer:         roycrippen@gmail.com
build-type:         Custom
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:    -Wall

custom-setup
    setup-depends:    base >= 4.17 && < 4.18
                    , Cabal >= 3.0
                    , directory >= 1.3  
                    , filepath >= 1.4   

library
    import:           warnings
    ghc-options:      -O2
    exposed-modules:  Day01
                    , Day02
                    , Day03
                    , Day04
                    , Day05
                    , Day06
                    , Day99
                    , Grid
                    , Util
    build-depends:    base ^>= 4.17.2.1
                    , bytestring >= 0.11
                    , containers >= 0.6
                    , dlist >= 0.1
                    , file-embed >= 0.0.16
                    , heredoc >= 0.2
                    , memoize >= 1.1
                    , parallel >= 3.2
                    , regex-posix
                    , text >= 2.0
                    , vector >= 0.13
                    , vector-algorithms >= 0.9
    hs-source-dirs:   lib
    default-language: GHC2021

executable aoc2024-haskell
    import:           warnings
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    base ^>= 4.17.2.1
                    , aoc2024-haskell
                    , deepseq >= 1.4
                    , parallel >= 3.2
                    , text >= 2.0
                    , time >= 1.9
    hs-source-dirs:   app
    default-language: GHC2021
    