cabal-version:      3.0
name:               aoc2024-haskell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             roycrippen
maintainer:         roycrippen@gmail.com
build-type:         Custom

common warnings
    ghc-options:    -Wall

custom-setup
    setup-depends:    base >= 4.18 && < 4.19
                    , Cabal >= 3.0
                    , directory >= 1.3
                    , filepath >= 1.4

library
    import:           warnings
    ghc-options:      -O2 -XOverloadedRecordDot -XDuplicateRecordFields
    exposed-modules:  Day01
                    , Day02
                    , Day03
                    , Day04
                    , Day05
                    , Day06
                    , Day07
                    , Day08
                    , Day09
                    , Day99
                    , Grid
                    , Util
    build-depends:    base ^>= 4.18.3.0
                    , bytestring
                    , containers
                    , deepseq
                    , dlist
                    , file-embed
                    , hashable
                    , heredoc
                    , memoize
                    , parallel
                    , regex-posix
                    , text
                    , unordered-containers
                    , vector >= 0.12 && < 0.14
                    , vector-algorithms
    hs-source-dirs:   lib
    default-language: GHC2021

executable aoc2024-haskell
    import:           warnings
    ghc-options:      -O2 -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    build-depends:    base ^>= 4.18.3.0
                    , aoc2024-haskell
                    , deepseq
                    , parallel
                    , text
                    , time
    hs-source-dirs:   app
    default-language: GHC2021
